make entry title a bit narrower to avoid it overlapping with the sponsor placement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1330,6 +1330,7 @@ a.issue-number:focus {
 .issue-page .entry-header .entry-title:first-child {
   margin-top: 0;
   padding: 0;
+  width: 96%;
 }
 
 .home-page .entry-header .entry-title a,
